# mongo-bus

./: .gitignore  CLAUDE.md  GitVersion.yml  MongoBus.sln  README.md  docfx.json
.github/workflows/: deploy.yml  docs.yml  python-client.yml
clients/python/: .gitignore  LICENSE  README.md  pyproject.toml
clients/python/src/mongobus/: __init__.py  constants.py  context.py  dispatch.py  documents.py  envelope.py  errors.py  indexes.py  queries.py  retry.py
clients/python/src/mongobus/_async/: bus.py  pump.py
clients/python/src/mongobus/_sync/: bus.py  pump.py
clients/python/src/mongobus/claimcheck/: __init__.py  config.py  core.py  gridfs.py  s3.py
clients/python/tests/: test_claimcheck_config.py  test_claimcheck_core.py  test_claimcheck_exports.py  test_claimcheck_gridfs.py  test_claimcheck_s3.py  test_constants.py  test_context.py  test_dispatch.py  test_documents.py  test_envelope.py  test_errors.py  test_golden_compat.py  test_indexes.py  test_integration_async.py  test_integration_s3.py  test_integration_sync.py  test_queries.py  test_retry.py
clients/python/tests/fixtures/: dotnet_envelope.json  dotnet_inbox_fields.json
docs/: index.md  toc.yml
docs/api/: index.md  toc.yml
samples/MongoBus.Sample/: MongoBus.Sample.csproj  MultiEventSagaWorkflow.cs  Program.cs  README.md
src/MongoBus/: MongoBus.csproj  README.md
src/MongoBus.ClaimCheck.AzureBlob/: MongoBus.ClaimCheck.AzureBlob.csproj  README.md
src/MongoBus.ClaimCheck.GridFs/: MongoBus.ClaimCheck.GridFs.csproj  README.md
src/MongoBus.ClaimCheck.S3/: MongoBus.ClaimCheck.S3.csproj  README.md
src/MongoBus.Dashboard/: MongoBus.Dashboard.csproj  MongoBusDashboardExtensions.cs
tests/MongoBus.Dashboard.Tests/: DashboardIntegrationTests.cs  MongoBus.Dashboard.Tests.csproj  MonitoringServiceTests.cs  UnitTest1.cs
tests/MongoBus.Tests/: BatchConsumerTests.cs  BatchGroupingEdgeTests.cs  BusIntegrationTests.cs  ClaimCheckCleanupTests.cs  ClaimCheckCompressionTests.cs  ClaimCheckEdgeTests.cs  ClaimCheckTests.cs  CleanupPolicyTests.cs  ConcurrencyTests.cs  ConfigValidationEdgeTests.cs  ConfigValidationTests.cs  CorrelationTests.cs  DefaultSourceTests.cs  DelayedMessageTests.cs  FanOutTests.cs  GridFsClaimCheckTests.cs  IdempotencyTests.cs  LimitedReadStreamTests.cs  MaxMessageSizeTests.cs  MiddlewareTests.cs  MongoBus.Tests.csproj  (+6 more)
(+142 files in other folders)
