[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mongo-bus"
version = "0.1.0"
description = "MongoDB-backed message bus client, wire-compatible with .NET MongoBus (CloudEvents over MongoDB)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["pymongo>=4.9"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-cov>=5", "testcontainers[mongodb]>=4"]

[tool.hatch.build.targets.wheel]
packages = ["src/mongobus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["mongobus"]
branch = true
