[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mongo-bus"
version = "0.1.0"
description = "MongoDB-backed message bus client, wire-compatible with .NET MongoBus (CloudEvents over MongoDB)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "elusiven" }]
keywords = [
    "mongodb",
    "message-bus",
    "messaging",
    "cloudevents",
    "inbox-pattern",
    "claim-check",
    "outbox",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: System :: Distributed Computing",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = ["pymongo>=4.9"]

[project.urls]
Homepage = "https://github.com/elusiven/mongo-bus"
Repository = "https://github.com/elusiven/mongo-bus"
Issues = "https://github.com/elusiven/mongo-bus/issues"

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
test = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-cov>=5", "testcontainers[mongodb]>=4", "boto3>=1.34", "moto>=5"]

[tool.hatch.build.targets.wheel]
packages = ["src/mongobus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["mongobus"]
branch = true
